2010-12-27  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #16402: Optimize stdWrap usage for TypoScript content element SVG (Thanks to Jo Hasenau)
	* Fixed bug #16386: Optimize stdWrap usage for TypoScript content elements PHP_SCRIPT_INT and PHP_SCRIPT_EXT (Thanks to Jo Hasenau)
	* Fixed bug #16404: Optimize stdWrap usage for TypoScript content element SWFOBJECT (Thanks to Jo Hasenau)
	* Fixed bug #16406: Optimize stdWrap usage for TypoScript content element SEARCHRESULT (Thanks to Jo Hasenau)
	* Fixed bug #16385: Optimize stdWrap usage for TypoScript content element PHP_SCRIPT (Thanks to Jo Hasenau)

2010-12-27  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16481: Live search uses hardcoded strings and has unused strings

2010-12-27  Steffen Ritter  <typo3@steffen-ritter.net>

	* FYI: Fixed bug #16476: tcaTree should work in flexforms, too
	* Follow-up to #16218: Bug/Feature: TCE-Forms does not use sprite icons -- this leads to inconsistency

2010-12-27  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16845: Better API for Update Wizards in the Install Tool (Thanks to Benjamin Mack)

2010-12-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0beta3

2010-12-27  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid to 1.3.0beta3

2010-12-26  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16841: Webkit performance issue with topbar status "in workspace"

2010-12-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #16611: [scheduler] tx_scheduler_CronCmd needs refactoring

2010-12-26  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16838: Scheduler: Use new CSH rendering API

2010-12-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #16842: Add Canadian French language to TYPO3 core
	* Follow-up to issue #16842: Add Canadian French language to TYPO3 core (add flag for 'qc')

2010-12-26  Tobias Liebig  <mail_typo3@etobi.de>
